force-app/main/default/objects/Guest_Master__c/Guest_Master__c.object-meta.xml
<CustomObject>
    <label>Guest Master</label>
    <nameField>
        <displayFormat>G-{000}</displayFormat>
        <label>Guest Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>