force-app/main/default/objects/Guest_Master__c/fields/Guest_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_First_Name__c</fullName>
    <label>Guest First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>